fixed spacing, added fade-up animation upon refresh

--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -1,3 +1,15 @@
+/* ANIMATION */
+@keyframes fade-up {
+    0% {
+        opacity: 0;
+        transform: translateY(30px) scale(0.9);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px) scale(1);
+    }
+}
+
 h1 {
     font-family: 'Merriweather', serif;
     text-align: center;
@@ -15,16 +27,13 @@ h1 {
     color: #00989e;
     font-size: 2.5rem;
     margin-bottom: 20px;
+    animation: fade-up 1.5s;
 }
 
 
 #member-name {
     font-family: 'Merriweather', serif;
     text-align: center;
-}
-
-section {
-    width: 100%;
 }
 
 p {
@@ -76,8 +85,9 @@ td {
     margin-bottom: 40px;
     background-color: #abb8c3;
     border-radius: 15px;
-    width: 100%;
-    margin-left: 0;
+    width: 90%;
+    margin-left: auto;
+    animation: fade-up 1.5s;
 }
 
 .mission-content {
@@ -123,13 +133,12 @@ max-width: 40%;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
 }
-
 .board-member:hover {
     transform: scale(1.05);
 }
 
 .board-member-image {
-    width: 100%;
+    max-width: 50%;
     height: auto;
     border-radius: 15px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
